增加一个批量操作结果集转换bool工具方法.